# lob-engine

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: bench_order_book.cpp  latency_order_book.cpp
include/lob/: order.hpp  order_book.hpp  side.hpp  types.hpp
src/: order_book.cpp
tests/: test_order_book.cpp
